feat: implement refresh token logic
